--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,98 +1,163 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__body">
-            <div class="footer__body-logo">
-                <div class="logo">
-                    <img src="../images/dist/logo.webp" alt="">
-                    <span>ATM24</span>
+            <div class="footer__body-main">
+                <div class="action">
+                    <a href="/" class="logo">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="42" height="40"
+                            viewBox="0 0 42 40" fill="none" aria-hidden="true">
+                            <mask id="mask0_header" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                                width="42" height="40">
+                                <rect x="-5.34058e-05" width="41.7827" height="39.9856" fill="#D9D9D9"></rect>
+                            </mask>
+                            <g mask="url(#mask0_header)">
+                                <path
+                                    d="M25.9792 3.25667L34.9705 19.3319C35.3273 19.9698 34.9246 20.7661 34.1992 20.8568C31.7744 21.1599 29.654 22.6368 28.5291 24.8062L28.2215 25.3994C27.7774 26.2559 26.5574 26.2704 26.0931 25.4247L24.8178 23.1018C23.1625 20.0868 18.7994 20.1805 17.2751 23.2638L11.007 35.9424L10.3552 37.0505C9.36727 38.73 7.56426 39.7613 5.61573 39.7613C1.82499 39.7613 -0.618885 35.7457 1.12267 32.3787L16.1025 3.41781C18.1552 -0.550888 23.7981 -0.642955 25.9792 3.25667Z"
+                                    fill="#F9643F"></path>
+                                <circle cx="5.84059" cy="5.84059" r="5.84059"
+                                    transform="matrix(-1 0 0 1 41.7839 27.8556)" fill="#F9643F"></circle>
+                                <circle cx="21.1177" cy="26.5079" r="2.69566" fill="#F9643F"></circle>
+                            </g>
+                        </svg>
+                        <div class="logo-wrap">
+                            <span>ATM24</span>
+                        </div>
+                    </a>
+                    <p class="small-text">
+                        50 криптовалют, 121 фиатная валюта, более <br> 30 000 направлений обмена
+                    </p>
+                    <div class="social">
+                        <a href="">
+                            <i data-lucide="facebook"></i>
+                        </a>
+                        <a href="">
+                            <i data-lucide="instagram"></i>
+                        </a>
+                        <a href="">
+                            <i data-lucide="twitter"></i>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-youtube" viewBox="0 0 16 16">
+                                <path
+                                    d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z" />
+                            </svg>
+                        </a>
+                    </div>
                 </div>
-                <p>
-                    © 2016-2025 ATM24.PRO <br>
-                    Отправляйте деньги онлайн в 187 <br> стран и территорий используя <br> более 500 000 пунктов выдачи
-                </p>
+                <nav>
+                    <div>
+                        <span class="base-text">Сервисы</span>
+                        <ul class="base-text">
+                            <li>
+                                <a href="">Обмен валют</a>
+                            </li>
+                            <li>
+                                <a href="">Денежные переводы</a>
+                            </li>
+                            <li>
+                                <a href="">Western Union</a>
+                            </li>
+                            <li>
+                                <a href="">Перевод на карту</a>
+                            </li>
+                            <li>
+                                <a href="">Криптовалюта</a>
+                            </li>
+                        </ul>
+                    </div>
+                     <div>
+                        <span class="base-text">Популярные направления</span>
+                        <ul class="base-text">
+                            <li>
+                                <a href="">Обмен валют Таиланд</a>
+                            </li>
+                            <li>
+                                <a href="">Обмен валют ОАЭ</a>
+                            </li>
+                            <li>
+                                <a href="">Обмен валют Турция</a>
+                            </li>
+                            <li>
+                                <a href="">Обмен валют Вьетнам</a>
+                            </li>
+                            <li>
+                                <a href="">Обмен валют Индонезия</a>
+                            </li>
+                        </ul>
+                    </div>
+                     <div>
+                        <span class="base-text">О компании</span>
+                        <ul class="base-text">
+                            <li>
+                                <a href="">О нас</a>
+                            </li>
+                            <li>
+                                <a href="">Франшиза</a>
+                            </li>
+                            <li>
+                                <a href="">Инвестиции</a>
+                            </li>
+                            <li>
+                                <a href="">Контакты</a>
+                            </li>
+                            <li>
+                                <a href="">Вакансии</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-            <div class="footer__body-menu">
-                <div class="footer__body-menu-item">
-                    <span>Направления обмена:</span>
-                    <ul>
-                        <li>
-                            <a href="">Обмен валют в Таиланде</a>
-                        </li>
-                        <li>
-                            <a href="">Обмен валют в Турции</a>
-                        </li>
-                        <li>
-                            <a href="">Обмен валют в ОАЭ</a>
-                        </li>
-                        <li>
-                            <a href="">Обмен валют во Вьетнаме</a>
-                        </li>
-                        <li>
-                            <a href="">Обмен валют в Индонезии</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__body-menu-item">
-                    <span>Направления перевода:</span>
-                    <ul>
-                        <li>
-                            <a href="">Перевод валют в Таиланде</a>
-                        </li>
-                        <li>
-                            <a href="">Перевод валют в Турции</a>
-                        </li>
-                        <li>
-                            <a href="">Перевод валют в ОАЭ</a>
-                        </li>
-                        <li>
-                            <a href="">Перевод валют во Вьетнаме</a>
-                        </li>
-                        <li>
-                            <a href="">Перевод валют в Индонезии</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__body-menu-item">
-                    <span>Ресурсы:</span>
-                    <ul>
-                        <li>
-                            <a href="">Франшиза</a>
-                        </li>
-                        <li>
-                            <a href="">Контакты</a>
-                        </li>
-                        <li>
-                            <a href="">О компании</a>
-                        </li>
-                        <li>
-                            <a href="">Инвестиции</a>
-                        </li>
-                        <li>
-                            <a href="">Перевод через Western Union</a>
-                        </li>
-                        <li>
-                            <a href="">Перевод по номеру карты</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="footer__body-contact">
+                <a href="">
+                    <div class="icon">
+                        <i data-lucide="phone-call"></i>
+                    </div>
+                    <div class="contact-wrap">
+                        <p class="small-text">Телефон</p>
+                        <span class="medium-text">+66-918-464-597</span>
+                        <p class="small-text">9:00 - 24:00 (GMT+7)</p>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="icon">
+                        <i data-lucide="mail"></i>
+                    </div>
+                    <div class="contact-wrap">
+                        <p class="small-text">Email</p>
+                        <span class="medium-text">info@atm24.pro</span>
+                        <p class="small-text">Ответим за 24 часа</p>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="icon">
+                        <i data-lucide="map-pin-house"></i>
+                    </div>
+                    <div class="contact-wrap">
+                        <p class="small-text">Офис</p>
+                        <span class="medium-text">Phuket, Thailand</span>
+                        <p class="small-text">Chalong, Mueang District</p>
+                    </div>
+                </a>
+                
             </div>
             <div class="footer__body-soft">
-                <a class="phone" href="tel:+66918464597">
-                    <img src="../images/dist/phone.webp" alt="">
-                    +66-918-464-597
-                </a>
-                <div class="footer__body-soft-information">
-                    <p>
-                        Ежедневно: с 9:00 до 24:00 по <br> Бангкокскому времени (+7 GMT)
-                    </p>
-                    <div class="address">
-                        <span>Юридический адрес компании:</span>
-                        <p>12/37 หมูที่ 1, E Chaofah Rd, Chalong, <br> Mueang Phuket District, Phuket 83130</p>
-                    </div>
-                    <a href="">
-                        Политика конфиденциальности
-                    </a>
+                <div class="soft-rights">
+                    <span class="base-text">© 2016-2025 ATM24.PRO</span>
+                    <a class="base-text" href="">Политика конфиденциальности</a>
+                    <a class="base-text" href="">Условия использования</a>
                 </div>
+                <p class="base-text">
+                    Разработка:
+                    <span>Nullable</span>
+                </p>
             </div>
         </div>
     </div>
