--- a/app/components/main.html
+++ b/app/components/main.html
@@ -1,20 +1,21 @@
-<main class="main">
-    <section class="hero">
-        <div class="container">
-            <div class="hero__body">
-                <img class="hero__body-img" src="../images/dist/main_img.webp" alt="">
-                <div class="hero__body-wrap">
-                    <span>
-                        <img src="../images/dist/hero.webp" alt="">
-                        209 стран, более 500 000 пунктов выдачи, 121 валюта
-                    </span>
-                    <h1>Перевести деньги <br> из России</h1>
-                    <p>
-                        Ваши деньги всегда с вами! <br><br>
-                        Быстро и безопасно. Наличными и Онлайн
-                    </p>
-                </div>
+<section class="hero">
+    <div class="container">
+        <div class="hero__body">
+            <div class="hero__body-wrap">
+                <span class="medium-text">
+                    <i data-lucide="earth"></i>
+                    209 стран, более 500 000 пунктов выдачи, 121 валюта
+                </span>
+                <h1 class="title">
+                    Перевести деньги <br>
+                    из России
+                </h1>
+                <p class="medium-text">
+                    Ваши деньги всегда с вами! <br> <br>
+                    Быстро и безопасно. Наличными и Онлайн
+                </p>
             </div>
+            <img src="../images/dist/hero.webp" alt="">
         </div>
-    </section>
-</main>
+    </div>
+</section>
