--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,20 +1,34 @@
 <header class="header">
-    <div class="header__body">
-        <div class="header__body-main">
-            <a href="/" class="logo">
-                <img src="../images/dist/logo.webp" alt="">
-                <div class="logo__wrap">
-                    <span>ATM24</span>
-                    <p>Переводы и обмен валют <br> по всему миру</p>
-                </div>
-            </a>
-            <div class="action">
-                <a href="tel:+66918464597" class="action__phone">
-                    <img src="../images/dist/phone.webp" alt="">
-                    +66-918-464-597
+    <div class="container">
+        <div class="header__body">
+            <div class="header__body-top">
+                <a href="/" class="logo">
+                    <svg class="header__logo-icon" xmlns="http://www.w3.org/2000/svg" width="42" height="40"
+                        viewBox="0 0 42 40" fill="none" aria-hidden="true">
+                        <mask id="mask0_header" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                            width="42" height="40">
+                            <rect x="-5.34058e-05" width="41.7827" height="39.9856" fill="#D9D9D9"></rect>
+                        </mask>
+                        <g mask="url(#mask0_header)">
+                            <path
+                                d="M25.9792 3.25667L34.9705 19.3319C35.3273 19.9698 34.9246 20.7661 34.1992 20.8568C31.7744 21.1599 29.654 22.6368 28.5291 24.8062L28.2215 25.3994C27.7774 26.2559 26.5574 26.2704 26.0931 25.4247L24.8178 23.1018C23.1625 20.0868 18.7994 20.1805 17.2751 23.2638L11.007 35.9424L10.3552 37.0505C9.36727 38.73 7.56426 39.7613 5.61573 39.7613C1.82499 39.7613 -0.618885 35.7457 1.12267 32.3787L16.1025 3.41781C18.1552 -0.550888 23.7981 -0.642955 25.9792 3.25667Z"
+                                fill="#F9643F"></path>
+                            <circle cx="5.84059" cy="5.84059" r="5.84059" transform="matrix(-1 0 0 1 41.7839 27.8556)"
+                                fill="#F9643F"></circle>
+                            <circle cx="21.1177" cy="26.5079" r="2.69566" fill="#F9643F"></circle>
+                        </g>
+                    </svg>
+                    <div class="logo-wrap">
+                        <span>ATM24</span>
+                        <p>Переводы и обмен валют по всему миру</p>
+                    </div>
                 </a>
-                <div class="action__buttons">
-                    <a class="whatsapp" href="">
+                <div class="action">
+                    <a class="phone base-text" href="">
+                        <i data-lucide="phone-call"></i>
+                        +66-918-464-597
+                    </a>
+                    <a href="" class="action-whatsapp base-text">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-whatsapp" viewBox="0 0 16 16">
                             <path
@@ -22,114 +36,69 @@
                         </svg>
                         WhatsApp
                     </a>
-                    <div class="switch__language">
-                        <div class="switch__language-main">
-                            <span class="language">RU</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                            </svg>
+                    <div class="switcher" x-data="{ open: false }" @click.outside="open = false">
+                        <div @click.stop="open = !open" class="switcher__main base-text">
+                            RU
+                            <i :class="{ 'opened': open }" data-lucide="chevron-down"></i>
                         </div>
-                        <div class="switch__language-modal">
-                            <a href="" class="language__item active">
-                                RU
-                            </a>
-                            <a href="" class="language__item">
-                                EN
-                            </a>
+
+                        <div class="default-modal base-text" x-show="open" x-transition.duration.500ms>
+                            <a href="#">RU</a>
+                            <a href="#">EN</a>
+                            <a href="#">TN</a>
                         </div>
                     </div>
                 </div>
             </div>
+            <nav class="header__body-nav">
+                <ul>
+                    <li class="base-text" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                        Переводы
+                        <i data-lucide="chevron-down" :class="{ 'rotate-180': open }"></i>
+                        <div class="nav-modal base-text" x-show="open" x-transition.duration.500ms>
+                            <a href="">Таиланд</a>
+                            <a href="">ОАЭ</a>
+                            <a href="">Переводы по номеру карты</a>
+                            <a class="actient" href="">Все страны</a>
+                        </div>
+                    </li>
+                    <li class="base-text" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                        Обмен валюты
+                        <i data-lucide="chevron-down" :class="{ 'rotate-180': open }"></i>
+                        <div class="nav-modal base-text" x-show="open" x-transition.duration.500ms>
+                            <a href="">Таиланд</a>
+                            <a href="">Турция</a>
+                            <a class="actient" href="">Все страны</a>
+                        </div>
+                    </li>
+                    <li class="base-text" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                        Сервисы
+                        <i data-lucide="chevron-down" :class="{ 'rotate-180': open }"></i>
+                        <div class="default-modal base-text" x-show="open" x-transition.duration.500ms>
+                            <a href="">WesternUnion</a>
+                            <a href="">Swift</a>
+                        </div>
+                    </li>
+                    <li class="base-text">
+                        <a href="">
+                            О нас
+                        </a>
+                    </li>
+                    <li class="base-text">
+                        <a href="">
+                            Контакты
+                        </a>
+                    </li>
+                    <li class="base-text" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                        Полезная информация
+                        <i data-lucide="chevron-down" :class="{ 'rotate-180': open }"></i>
+                        <div class="default-modal base-text" x-show="open" x-transition.duration.500ms>
+                            <a href="">Стать партнером</a>
+                            <a href="">Инвестиции</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="header__body-navigation">
-            <ul class="navigation__list">
-                <li class="has-child">
-                    Переводы
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                    </svg>
-                    <div class="child">
-                        <a href="">Таиланд</a>
-                        <a href="">Объединённые Арабские Эмираты</a>
-                        <a href="">Индонезия</a>
-                        <a href="">Вьетнам</a>
-                        <a href="">Турция</a>
-                        <a href="">Китай</a>
-                        <a href="">Казахстан</a>
-                        <a href="">Южная Корея</a>
-                        <a href="">Япония</a>
-                    </div>
-                </li>
-                <li class="has-child">
-                    Обмен валюты
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                    </svg>
-                    <div class="child">
-                        <a href="">Таиланд</a>
-                        <a href="">Объединённые Арабские Эмираты</a>
-                        <a href="">Индонезия</a>
-                        <a href="">Вьетнам</a>
-                        <a href="">Турция</a>
-                        <a href="">Китай</a>
-                        <a href="">Казахстан</a>
-                        <a href="">Южная Корея</a>
-                        <a href="">Япония</a>
-                    </div>
-                </li>
-                <li class="has-child">
-                    Сервисы
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                    </svg>
-                    <div class="child">
-                        <a href="">WesternUnion</a>
-                        <a href="">Alipay</a>
-                        <a href="">Swift</a>
-                        <a href="">PayPal</a>
-                        <a href="">Airbnb</a>
-                        <a href="">Валютный эквайринг</a>
-                        <a href="">Оплата недвижимости</a>
-                        <a href="">Оплата товаров и услуг для <br> компании из России</a>
-                    </div>
-                </li>
-                <li>
-                    <a href="">
-                        О компании
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        Контакты
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        Блог
-                    </a>
-                </li>
-                <li class="has-child">
-                    Полезная информация
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                    </svg>
-                    <div class="child">
-                        <a href="">Стать партнером</a>
-                        <a href="">Инвестиции</a>
-                        <a href="">Франшиза</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
     </div>
 </header>
