--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,87 +1,101 @@
 .footer {
     width: 100%;
-    margin-top: 100px;
+    padding: 60px 0 30px;
+    border-top: 1px solid var(--color-border);
 
     &__body {
         display: flex;
-        justify-content: space-between;
-
-        &-logo {
+        flex-direction: column;
+        gap: 60px;
+        &-main {
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            gap: 24px;
+            justify-content: space-between;
 
-            .logo {
-                display: flex;
-                align-items: center;
-                gap: 6px;
-
-                img {
-                    width: 55px;
-                    height: 52px;
-                    object-fit: cover;
-                }
-
-                span {
-                    font-size: 28px;
-                    font-weight: 600;
-                    line-height: 100%;
-                    color: var(--black);
-                }
-            }
-
-            p {
-                font-size: 11px;
-                line-height: 120%;
-                color: var(--black);
-            }
-        }
-
-        &-menu {
-            display: flex;
-            flex-wrap: wrap;
-            column-gap: 128px;
-            row-gap: 64px;
-            max-width: 50%;
-
-            &-item {
+            .action {
                 display: flex;
                 flex-direction: column;
-                gap: 16px;
+                gap: 20px;
+
+                .social {
+                    display: flex;
+                    gap: 12px;
+
+                    a {
+                        background: var(--color-pale);
+                        width: 40px;
+                        aspect-ratio: 1/1;
+                        border-radius: 8px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        transition: all 0.5s ease;
+
+                        &:hover {
+                            background: var(--color-actient);
+
+                            svg {
+                                color: var(--color-white);
+                            }
+                        }
+
+                        svg {
+                            width: 24px;
+                            height: 24px;
+                            color: var(--color-primary-textbody);
+                            transition: all 0.5s ease;
+                        }
+                    }
+                }
+            }
+
+            nav {
+                width: 60%;
+                display: flex;
+                justify-content: space-between;
 
                 span {
-                    font-size: 14px;
-                    color: var(--black);
-                    opacity: .55;
-                    line-height: 120%;
+                    font-size: 16px;
+                    font-weight: 700;
+                    color: var(--color-primary-textnav);
                 }
 
-                ul {
+                div {
                     display: flex;
                     flex-direction: column;
-                    gap: 16px;
+                    gap: 20px;
 
-                    li {
-                        font-size: 18px;
-                        line-height: 100%;
-                        color: var(--black);
-                        transition: all 0.3s ease;
-                        position: relative;
-                        max-width: max-content;
-                        &::before{
-                            content: '';
-                            position: absolute;
-                            top: 120%;
-                            left: 50%;
-                            transform: translateX(-50%);
-                            width: 0px;
-                            height: 2px;
-                            background: var(--orange);
-                            transition: all 0.4s ease;
-                        }
-                        &:hover {
-                            &::before{
-                                width: 100%;
+                    ul {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 12px;
+                        color: var(--color-primary-textbody);
+                        font-weight: 400;
+                        line-height: 110%;
+
+                        li {
+                            position: relative;
+                            transition: all 0.3s ease;
+                            max-width: max-content;
+
+                            &:hover {
+                                color: var(--color-actient);
+
+                                &::after {
+                                    width: 100%;
+                                }
+                            }
+
+                            &::after {
+                                content: '';
+                                position: absolute;
+                                left: 0;
+                                z-index: 0;
+                                width: 0;
+                                height: 2px;
+                                background: var(--color-actient);
+                                top: 110%;
+                                transition: all 0.3s ease;
                             }
                         }
                     }
@@ -89,60 +103,75 @@
             }
         }
 
-        &-soft {
-            display: flex;
-            flex-direction: column;
-            gap: 64px;
-            align-items: flex-end;
-
-            .phone {
+        &-contact {
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 24px;
+            padding-top: 40px;
+            border-top: 1px solid var(--color-border);
+            a {
+                padding: 24px;
                 display: flex;
-                align-items: center;
-                gap: 6px;
-                font-size: 18px;
-                font-weight: 600;
-                line-height: 140%;
-
-                img {
-                    width: 16px;
-                    height: 16px;
+                gap: 16px;
+                border-radius: 16px;
+                border: 1px solid var(--color-border);
+                &:hover{
+                    span{
+                        color: var(--color-actient);
+                    }
                 }
-            }
-            &-information{
-                display: flex;
-                flex-direction: column;
-                gap: 24px;
-                align-items: flex-end;
-                p{
-                    font-size: 13px;
-                    color: #858585;
-                    font-weight: 400;
-                    line-height: 140%;
-                    text-align: end;
+                .icon{
+                    width: 48px;
+                    aspect-ratio: 1/1;
+                    max-height: max-content;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background: var(--color-pale);
+                    border-radius: 12px;
+                    svg{
+                        color: var(--color-actient);
+                        width: 20px;
+                        height: 20px;
+                    }
                 }
-                .address{
+                .contact-wrap{
                     display: flex;
                     flex-direction: column;
-                    gap: 12px;
-                    align-items: flex-end;
+                    gap: 8px;
                     span{
-                        font-size: 13px;
-                        color: #858585;
-                        line-height: 100%;
-                        font-weight: 400;
-                    }
-                    p{
-                        text-align: end;
-                        font-size: 13px;
-                        color: var(--black);
-                        line-height: 140%;
+                        transition: all 0.3s ease;
                     }
                 }
+            }
+        }
+        &-soft{
+            padding-top: 30px;
+            border-top: 1px solid var(--color-border);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            .soft-rights{
+                display: flex;
+                align-items: center;
+                gap: 24px;
+                span{
+                    color: var(--color-primary-textnav);
+                }
                 a{
-                    color: #858585;
-                    font-size: 14px;
-                    line-height: 100%;
-                    font-weight: 400;
+                    transition: all 0.3s ease;
+                    color: var(--color-primary-textbody);
+                    &:hover{
+                        color: var(--color-actient);
+                    }
+                }
+            }
+            .text-base{
+                span{
+                    color: var(--color-primary-textnav);
+                    font-weight: 600;
                 }
             }
         }
