--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -3,263 +3,122 @@
     position: fixed;
     top: 0;
     left: 0;
-    padding: 8px 0px;
-    background: var(--white);
     z-index: 99;
+    background: var(--color-white);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.03);
     &__body {
         display: flex;
         flex-direction: column;
-        width: 100%;
 
-        &-main {
-            max-width: 1200px;
-            margin: 0 auto;
+        &-top {
+            padding: 6px 0;
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 100%;
-            padding-bottom: 8px;
+            border-bottom: 1px solid var(--color-border);
 
-            .logo {
-                display: flex;
-                align-items: center;
-                gap: 12px;
-
-                img {
-                    width: 55px;
-                    height: 52px;
-                    object-fit: cover;
-                }
-
-                &__wrap {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 6px;
-
-                    span {
-                        font-size: 28px;
-                        font-weight: 600;
-                        line-height: 100%;
-                        color: var(--black);
-                    }
-
-                    p {
-                        font-size: 11px;
-                        line-height: 100%;
-                        color: var(--black);
-                    }
-                }
-            }
 
             .action {
                 display: flex;
                 align-items: center;
-                gap: 24px;
-
-                &__phone {
+                gap: 16px;
+                
+                .phone {
                     display: flex;
                     align-items: center;
-                    gap: 6px;
-                    font-size: 18px;
-                    font-weight: 600;
-                    line-height: 140%;
-
-                    img {
-                        width: 16px;
-                        height: 16px;
+                    gap: 8px;
+                    color: var(--color-primary-textnav);
+                    transition: all 0.3s ease;
+                    &:hover{
+                        color: var(--color-actient);
+                    }
+                    svg {
+                        width: 14px;
+                        height: 14px;
+                        path {
+                            stroke: none;
+                            fill: var(--color-actient);
+                        }
                     }
                 }
-
-                &__buttons {
+                &-whatsapp{
+                    padding: 10px 18px;
                     display: flex;
                     align-items: center;
-                    gap: 16px;
-
-                    .whatsapp {
-                        padding: 16px 24px;
-                        background: var(--green);
-                        border-radius: 50px;
+                    gap: 8px;
+                    color: var(--color-white);
+                    background: var(--color-whatsapp);
+                    transition: all 0.3s ease;
+                    border-radius: 50px;
+                    &:hover{
+                        opacity: .9;
+                    }
+                    svg{
+                        width: 14px;
+                        height: 14px;
+                    }
+                }
+                .switcher{
+                    position: relative;
+                    &__main{
+                        padding: 8px 16px;
                         display: flex;
                         align-items: center;
-                        gap: 8px;
-                        font-size: 14px;
-                        line-height: 100%;
-                        color: var(--white);
-
-                        svg {
-                            width: 16px;
-                            height: 16px;
-                        }
-                    }
-
-                    .switch__language {
-                        position: relative;
-                        background: var(--main);
-                        border-radius: 24px;
-                        width: 60px;
-                        padding: 12px 0px;
-                        display: flex;
-                        justify-content: center;
+                        gap: 6px;
+                        background: var(--color-bglight);
+                        border-radius: 50px;
+                        color: var(--color-primary-textnav);
                         cursor: pointer;
-                        transition: all 0.3s ease;
-                        &:hover {
-                            background: var(--white);
-                            border: 1px solid var(--black);
-                            svg {
+                        svg{
+                            width: 14px;
+                            height: 14px;
+                            transition: all 0.3s ease;
+                            &.opened{
                                 rotate: 180deg;
-                                fill: var(--black);
-                            }
-                            .switch__language-main span{
-                                color: var(--black);
-                            }
-                            .switch__language-modal {
-                                max-height: 1000px;
-                            }
-                        }
-
-                        &-main {
-                            display: flex;
-                            align-items: center;
-                            gap: 4px;
-
-                            span {
-                                text-transform: uppercase;
-                                font-size: 14px;
-                                line-height: 100%;
-                                color: var(--white);
-                                transition: all 0.3s ease;
-                            }
-
-                            svg {
-                                width: 8px;
-                                height: 8px;
-                                fill: var(--white);
-                                transition: all 0.3s ease;
-                            }
-                        }
-
-                        &-modal {
-                            position: absolute;
-                            top: 140%;
-                            left: 50%;
-                            transform: translateX(-50%);
-                            transition: all 0.5s ease;
-                            background: var(--white);
-                            width: 300px;
-                            border-radius: 20px;
-                            box-shadow: 0px 0px 17px rgba(136, 136, 136, 0.11);
-                            display: flex;
-                            flex-direction: column;
-                            max-height: 0;
-                            overflow: hidden;
-                            z-index: 2;
-
-                            .language__item {
-                                padding: 18px 20px;
-                                font-size: 16px;
-                                transition: all 0.3s ease;
-                                color: var(--black);
-                                font-weight: 400;
-
-                                &:not(:last-child) {
-                                    padding: 18px 20px 6px 20px;
-                                }
-
-                                &:hover {
-                                    color: var(--orange);
-                                }
-
-                                &.active {
-                                    font-weight: 600;
-                                }
                             }
                         }
                     }
                 }
             }
         }
-
-        &-navigation {
+        &-nav{
             width: 100%;
-            border-top: 1px solid #e2e2e255;
-            border-bottom: 1px solid #e2e2e255;
-
-            .navigation__list {
-                max-width: 1200px;
-                margin: 0 auto;
+            padding: 4px 0;
+            ul{
                 display: flex;
+                align-items: center;
                 justify-content: space-between;
-
-                li {
-                    padding: 16px 42px;
-                    background: transparent;
-                    transition: all 0.3s ease;
-                    color: var(--black);
-                    font-size: 14px;
-                    line-height: 100%;
+                width: 100%;
+                li{
+                    position: relative;
+                    padding: 6px 10px;
                     display: flex;
                     align-items: center;
-                    gap: 4px;
-                    position: relative;
+                    gap: 6px;
+                    font-weight: 500;
+                    color: var(--color-primary-textnav);
+                    transition: all 0.3s ease;
+                    border-radius: 5px;
                     cursor: pointer;
-
-                    &:hover {
-                        background: #e2e2e255;
-
-                        svg {
+                    &:hover{
+                        background: var(--color-pale);
+                        color: var(--color-actient);
+                    }
+                    svg{
+                        width: 14px;
+                        height: 14px;
+                        transition: all 0.5s ease;
+                        &.rotate-180{
                             rotate: 180deg;
                         }
                     }
-
-                    &:has(.child):hover {
-                        .child {
-                            max-height: 1000px;
-                        }
-                    }
-
-                    svg {
-                        width: 8px;
-                        height: 8px;
-                        transition: all 0.3s ease;
-                    }
-
-                    .child {
-                        position: absolute;
-                        top: 140%;
-                        left: 50%;
-                        transform: translateX(-50%);
-                        transition: all 0.5s ease;
-                        background: var(--white);
-                        min-width: 300px;
-                        width: auto;
-                        border-radius: 20px;
-                        box-shadow: 0px 0px 17px rgba(136, 136, 136, 0.11);
-                        display: flex;
-                        flex-direction: column;
-                        max-height: 0;
-                        overflow: hidden;
-                        z-index: 1;
-
-                        a {
-                            padding: 18px 20px;
-                            font-size: 16px;
-                            transition: all 0.3s ease;
-                            color: var(--black);
-                            font-weight: 400;
+                    .default-modal{
+                        padding: 20px;
+                        left: 0;
+                        a{
+                            font-weight: 600;
                             white-space: nowrap;
-                            line-height: 120%;
-
-                            &:not(:last-child) {
-                                padding: 18px 20px 6px 20px;
-                            }
-
-                            &:hover {
-                                color: var(--orange);
-                            }
-
-                            &.active {
-                                font-weight: 600;
-                            }
                         }
                     }
                 }
