Transfer Desktop Page

--- a/app/scss/colors.scss
+++ b/app/scss/colors.scss
@@ -10,5 +10,6 @@
     --color-whatsapp: #25d366;
     --color-border: #f3f4f6;
     --color-bglight: #f9fafb;
+    --color-bggray: #f6f7f8;
     --color-socialbg: #f2f4f7;
 }
