--- a/app/scss/text.scss
+++ b/app/scss/text.scss
@@ -21,3 +21,9 @@
     line-height: 120%;
     font-weight: 600;
 }
+.soft-title{
+    font-size: 40px;
+    line-height: 120%;
+    font-weight: 600;
+    color: var(--color-primary);
+}
