--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -6,6 +6,10 @@
     z-index: 99;
     background: var(--color-white);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.03);
+    transition: all 0.5s ease;
+    &.back{
+        transform: translateY(-100%);
+    }
     &__body {
         display: flex;
         flex-direction: column;
