--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,9 @@
+.main{
+    margin-top: var(--first-section);
+}
+
 .hero{
     width: 100%;
-    margin-top: 150px;
     padding-bottom: 150px;
     &__body{
         position: relative;
